--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,7 +17,6 @@ hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
 Pillow==7.2.0
-psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -31,4 +30,5 @@ sqlparse==0.3.1
 static3==0.7.0
 Twisted==20.3.0
 txaio==20.4.1
+xhtml2pdf==0.2.5
 zope.interface==5.1.2
