--- a/.env_exemple
+++ b/.env_exemple
@@ -1,9 +1,9 @@
-SECRET_KEY=
-DEBUG=
+SECRET_KEY=)797-b^&t50^-b5on*_q(=sc3wbt*ry2ys!aipvjv_cp3)cz&*
+DEBUG=True
 
-EMAIL_BACKEND = 
-EMAIL_HOST = 
-EMAIL_PORT = 
-EMAIL_HOST_USER = 
-EMAIL_HOST_PASSWORD = 
-EMAIL_USE_TLS = 
+EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST = 'smtp.gmail.com' 
+EMAIL_PORT = 587
+EMAIL_HOST_USER = 'noreplyalugo@gmail.com'
+EMAIL_HOST_PASSWORD = 'projeto_integrador_tcc!@#2020'
+EMAIL_USE_TLS = True
